Fixed spacing and colors; project complete

--- a/travelPage/css/places.css
+++ b/travelPage/css/places.css
@@ -3,13 +3,28 @@ body {
   color: rgb(68, 68, 68);
 }
 
+#page-logo a {
+  color: rgb(183, 230, 235);
+}
+
 header {
   position: static;
 }
 
+header li a {
+  color: rgb(183, 230, 235);
+}
+
+header li a:hover {
+  background-color: rgb(183, 230, 235);
+  color: rgb(59, 59, 59);
+
+
+}
+
 main ul {
   width: 1200px;
-  margin: 0 auto;
+  margin: 0 auto 48px auto;
   display: grid;
   grid-template-columns: repeat(2, 2fr);
   grid-gap: 20px 20px;
@@ -38,6 +53,10 @@ main li img {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+}
+
+.item-content h2 {
+  margin: 0;
 }
 
 .actions {
